# formula1sredemo

./: .editorconfig  .gitignore  LICENSE  README.md  Readme.md
.github/workflows/: apps.yml  infra.yml
db/: schema.sql  seed.sql
docs/: demo-flow.md  sre-demo.md  sre-roadmap.md  techspec.md
infra/: main.bicep
infra/modules/: appservice.bicep  keyvault.bicep  monitoring.bicep  network.bicep  sqlmi.bicep  vm.bicep  workbook.bicep
infra/parameters/: dev.bicepparam
scripts/: deploy-filegenerator.ps1  deploy-infra-detach.sh  deploy-infra.sh  finish-filegenerator-deploy.ps1  generate-traffic.sh  install-vm-deps.ps1  run-ingest.ps1  schedule-traffic.sh
scripts/break/: README.md  disk-fill.sh  filegen.sh  slow-query.sh  sql.sh  stale-data.sh
scripts/heal/: disk-fill.sh  filegen.sh  slow-query.sh  sql.sh  stale-data.sh
scripts/vm/: vm-traffic-loop.ps1
src/filegenerator/: FileGenerator.csproj  Metrics.cs  Program.cs  README.md  SqlQueryHelpers.cs  appsettings.json
src/filegenerator/Endpoints/: HealthEndpoints.cs  LapDetailEndpoints.cs  QualifyingEndpoints.cs  RaceEndpoints.cs  SeasonEndpoints.cs
src/ingestion/: README.md  pyproject.toml
src/ingestion/src/f1_ingest/: __init__.py  fastf1_loader.py  main.py  metrics.py  sql_writer.py
src/web/: App.razor  Program.cs  README.md  Web.csproj  _Imports.razor  appsettings.json
src/web/Pages/: Compare.razor  Error.cshtml  Error.cshtml.cs  Index.razor  LapExplorer.razor  Qualifying.razor  Race.razor  _Host.cshtml
src/web/Services/: CsvTable.cs  FileGeneratorClient.cs  LapStats.cs
src/web/wwwroot/css/: site.css
(+2 files in other folders)
